Updated Project 990 Work History

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                     <p>08/2024 - Present</p>
                     <p>Building ETL pipelines, applying causal inference and classifying mission statements with LLMs to support data-driven decision-making and collaboration within the nonprofit sector.</p>
                     <ul>
-                        <li>Designed <b>ETL pipelines</b> for data aggregation using <b>SQL</b> and <b>Pandas</b>, ensuring accurate extraction, transformation, and loading from IRS <b>API</b> to populate databases.</li>
-                        <li>Applied <b>causal inference</b> and tested for <b>multicollinearity</b> to identify key factors driving nonprofit outcomes, supporting data-driven recommendations.</li>
-                        <li>•Built ensemble classification models and <b>fine-tuned LLMs (Llama-2, Mistral 7b)</b> to categorize nonprofit programs, achieving <b>92% classification accuracy</b>.</li>
+                        <li>Designing <b>ETL pipelines</b> for </b>data aggregation</b> using </b>SQL</b> and </b>Pandas</b> to extract, transform, and load over </b>2 million rows</b> from the IRS API into </b>databases</b>.</li>
+                        <li>Applying <b>causal inference</b> and test fingor <b>multicollinearity</b> to identify key factors driving nonprofit outcomes, supporting data-driven recommendations.</li>
+                        <li>•Building ensemble classification models and <b>fine-tuned LLMs (Llama-2, Mistral 7b)</b>  to categorize nonprofit programs with <b>92% accuracy</b>.</li>
                     </ul>
                 </div>
 
