Updated Project 990 Work History

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <ul>
                         <li>Designing <b>ETL pipelines</b> for </b>data aggregation</b> using </b>SQL</b> and </b>Pandas</b> to extract, transform, and load over </b>2 million rows</b> from the IRS API into </b>databases</b>.</li>
                         <li>Applying <b>causal inference</b> and test fingor <b>multicollinearity</b> to identify key factors driving nonprofit outcomes, supporting data-driven recommendations.</li>
-                        <li>•Building ensemble classification models and <b>fine-tuned LLMs (Llama-2, Mistral 7b)</b>  to categorize nonprofit programs with <b>92% accuracy</b>.</li>
+                        <li>Building ensemble classification models and <b>fine-tuned LLMs (Llama-2, Mistral 7b)</b>  to categorize nonprofit programs with <b>92% accuracy</b>.</li>
                     </ul>
                 </div>
 
