Added Dark mode functionality

--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
         <!-- Swiper CSS -->
         <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
         <script src="./js/carousel.js"></script>
+        <script src="./js/theme.js"></script>
+
     </head>
     <body>
-        <div id="container--main">
 
+        <div id="theme-toggle" class="theme-toggle">
+            <span id="theme-icon">☀️</span>
+        </div>
+
+        <div id="container--main">
             <section id="wrapper--hero" class="section--page">
                 <img id="profile-pic" src="./assets/images/profile_pic.png">
 
