--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
                 <div>
                     <h1 id="user-name">Mohit Kundu</h1>
+                    <p id="job-title">Data Scientist and Machine Learning Engineer</p>
                     <div class="location-pill-wrapper">
                         <p id="location">📍 Chicago, IL</p>
                         <span class="pill-box">
@@ -32,7 +33,7 @@
                             Open to Work
                         </span>
                     </div>
-                    <p id="bio">Computer Science Graduate (MS. in Computer Science) with Extensive Experience in Big Data, AI, and Cutting-Edge Machine Learning Algorithms.</p>              
+                    <p id="bio">Computer Science Graduate (MS. in Computer Science) with deep expertise in Data Science, AI, and Cutting-Edge Machine Learning Algorithms. From designing ML models that identify heart disease to building recommendation systems and ETL pipelines, I am passionate about creating solutions that are functional, efficient, and impactful.</p>              
             </section>
 
             <section class="section--page">
@@ -47,10 +48,10 @@
             <section class="section--page">
                 <h2>About me</h2>
                 <ul id="qualifications--list">
-                    <li>✔️ Over 5 Years hands-on experience in the software development, data science & machine learning space</li>
-                    <li>✔️ Former Research Assistant at Kelley School of Business </li>
-                    <li>✔️ Proven Track Record building products in the healthcare, finance, Tech, social impact industry and more</li>
-                    <li>✔️ Seeking Full-Time Data Science, Machine Learning and Software Development roles </li>
+                    <li>✔️ 5+ Years experience building products with Data Science and Machine Learning libraries</li>
+                    <li>✔️ Former Research Assistant at Kelley School of Business 💼</li>
+                    <li>✔️ Proven Track Record delivering impactful solutions across healthcare, retail, finance, tech, and social sectors</li>
+                    <li>✔️ Actively seeking full-time roles in Data Science, Machine Learning, Data Engineering and Software Development </li>
                 </ul>
             </section>
 
@@ -158,7 +159,12 @@
                                 <li>Improved accuracy by 25% with semantic chunking, while cutting query retrieval time by 30%.</li>
                                 <li>Developed a Streamlit interface and containerized the system with Docker for consistent, scalable deployment.</li>
                                 </ul>
-                                <div class="project-number"></div> <!-- Add this for the project number -->
+                                <div class="project-info">
+                                    <div class="project-number"></div>
+                                    <a href="https://github.com/Mohit-Kundu/Research-Paper-Query-System-with-RAG-Architecture" target="_blank">
+                                        <img id="github-link" src="./assets/images/github-logo.png" alt="GitHub Link">
+                                    </a>
+                                </div>   
                             </div>
                         </div>
                         <div class="carousel-item">
